--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -2,6 +2,8 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: Ubuntu, sans-serif; }
+  font-family: "Ubuntu", sans-serif;
+  
+}
 
 /*# sourceMappingURL=main.css.map */
