--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -3,6 +3,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Ubuntu", sans-serif;
+  overflow-x: hidden;
 }
 
 /*# sourceMappingURL=main.css.map */
