--- a/assets/css/leaflet.css
+++ b/assets/css/leaflet.css
@@ -38,6 +38,7 @@
   width: 1600px;
   height: 1600px;
   -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
 }
 .leaflet-marker-icon,
 .leaflet-marker-shadow {
@@ -102,6 +103,7 @@
 /* workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=888319 */
 .leaflet-overlay-pane svg {
   -moz-user-select: none;
+  user-select: none;
 }
 
 .leaflet-pane {
